Attempting to fix background image issue on mobile

--- a/app/assets/stylesheets/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/bootstrap-custom.css.scss
@@ -1611,13 +1611,15 @@ input[type="checkbox"] {
   }
   // Index page
 .banner-xs {
-    background: url("https://s3-us-west-2.amazonaws.com/knird/index/home3_adj_xs.jpg") no-repeat fixed center center / cover transparent;
+    background: url("https://s3-us-west-2.amazonaws.com/knird/index/home3_adj_xs.jpg") no-repeat center center / cover transparent;
     background-clip: border-box;
     background-origin: padding-box;
-    -webkit-background-size: auto 100%;
-    -moz-background-size: auto 100%;
-    -o-background-size: auto 100%;
-    background-size: auto 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-attachment:scroll;
+    background-position:left top;
     height: 110vh;
 }
 .valueStatement {
